# jSOLi

./: .gitignore  Anchor.toml  README.md  jsol_vault_ultimate.json  netlify.toml  package-lock.json
docs/: AUDIT_REPORT.md  DEPLOYMENT.md  MAINNET_ROLLOUT.md  MARKETING_GRANTS.md  QA_GUIDE.md  RED_TEAM_AUDIT.md  TECHNICAL_WALKTHROUGH.md
frontend/: .env.example  .gitignore  README.md  config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/actions/deposit/: route.ts
frontend/app/api/actions/withdraw/: route.ts
frontend/app/components/: AccessLinks.tsx  CustomConnectButton.tsx  FASBDashboard.tsx  FASBModal.tsx  OnrampModal.tsx  TermsModal.tsx  TreasuryModal.tsx  TreasuryMode.tsx  TutorialModal.tsx
frontend/app/hooks/: useMiniApp.ts  usePaymasterDeposit.ts  useProgram.ts  useSafeApps.ts  useSolPrice.ts  useTransactionHistory.ts  useVaultStats.ts
frontend/app/idl/: jsol_vault.json
frontend/public/: _headers  actions.json  manifest.json
frontend/public/.well-known/: farcaster.json
programs/jsol-vault/: Cargo.toml
programs/jsol-vault/src/: build_errors.txt  constants.rs  errors.rs  lib.rs  state.rs
programs/jsol-vault/src/instructions/: admin.rs  deposit.rs  initialize.rs  mod.rs  rebalance.rs  staking.rs  withdraw.rs
programs/jsol-vault/src/utils/: cpi.rs  math.rs  mod.rs  oracle.rs  protocols.rs  validation.rs
scripts/: init_vault.ts  keeper.ts
tests/: jsol-vault.ts
