[package]
name = "jsol-vault"
version = "0.1.0"
description = "Production-grade Solana LST aggregator vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jsol_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
# Pin to avoid edition 2024 issue
constant_time_eq = "=0.3.1"
