[package]
name = "jsol-vault"
version = "0.1.0"
description = "Production-grade Solana LST aggregator vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jsol_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
# Pin to avoid edition 2024 issue
constant_time_eq = "=0.3.1"
blake3 = "=1.5.5"
pyth-sdk-solana = "0.10.0"
spl-stake-pool = "1.0.0"
spl-token = "4.0.0"
